--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -2,7 +2,7 @@ name: Deploy SSP
 on:
   push:
     branches:
-      - master
+      - workspace-recovery
   workflow_dispatch:
 env:
   USERNAME: ${{ secrets.GITHUB_ACTOR }}
